@@ -30,6 +30,9 @@
 	Fixed descriptions of exit :commands in menus (visible during popup
 	completion).
 
+	Fixed statusbar output not being preserved on running commands from
+	:history menus.
+
 0.13-beta to 0.13 (2023-04-04)
 
 	Made "withicase" and "withrcase" affect how files are sorted before
